--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.0.0-dev.68.0 <3.0.0"
+  sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -20,13 +20,16 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
-  sqflite: any
+  moor_flutter: ^2.0.0
   rxdart: ^0.20.0
   flutter_bloc: ^0.4.11
   fluttertoast: ^2.2.3
   flutter_blue: ^0.4.2
 
 dev_dependencies:
+  moor_generator: ^2.0.1
+  build_runner: ^1.7.2
+
   flutter_test:
     sdk: flutter
 
