--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,10 +21,10 @@ dependencies:
   cupertino_icons: ^0.1.2
 
   moor_flutter: ^2.0.0
-  rxdart: ^0.20.0
+  rxdart: ^0.22.6
   flutter_bloc: ^0.4.11
-  fluttertoast: ^2.2.3
-  flutter_blue: ^0.4.2
+  fluttertoast: ^3.1.3
+  flutter_blue: ^0.6.3+1
 
 dev_dependencies:
   moor_generator: ^2.0.1
