--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
+  kiwi: ^0.2.0
   moor_flutter: ^2.0.0
   rxdart: ^0.22.6
   flutter_bloc: ^0.4.11
