--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   flutter_bloc: ^0.4.11
   fluttertoast: ^3.1.3
   flutter_blue: ^0.6.3+1
+  udp: ^2.0.0
 
 dev_dependencies:
   moor_generator: ^2.0.1
