--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,11 +24,12 @@ dependencies:
   flutter:
     sdk: flutter
 
+  provider: ^6.0.0
   get_it: ^7.2.0
   moor_flutter: ^4.0.0
   rxdart: ^0.26.0
   fluttertoast: ^8.0.8
-  flutter_blue: ^0.8.0
+  flutter_bluetooth_serial: ^0.4.0
   udp: ^3.0.3
 
 dev_dependencies:
