--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,7 @@ jobs:
       - uses: actions/setup-java@v1
         with:
           java-version: '12.x'
+      - uses: lukka/get-cmake@latest
       - uses: subosito/flutter-action@v1
         with:
           channel: 'stable'
