--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,10 +27,15 @@ jobs:
       - uses: actions/setup-java@v1
         with:
           java-version: '12.x'
-      - uses: lukka/get-cmake@latest
       - uses: subosito/flutter-action@v1
         with:
           channel: 'stable'
+      - name: Patch for linux build
+        run: |
+          flutter doctor
+          sudo apt-get update -y
+          sudo apt-get install -y ninja-build libgtk-3-dev
+          flutter doctor
       - run: flutter pub get
       - run: flutter build apk
       - run: flutter config --enable-linux-desktop
